# spatial-analysis-tool

./: .gitignore  README.md  provision-cloud-resources.sh  pyproject.toml
app/: accessibility_report.md  app.py  main.py
app/i18n/: en.json  fr.json
app/static/: styles.css
app/uploads/: fwdgeocodeResults_1722520353572.csv
app/utils/: data_processor.py  map_utils.py  metadata_generator.py
attached_assets/: Pasted-As-you-can-see-there-are-areas-where-the-hexagons-don-t-fully-cover-all-census-tract-To-solve-this-1740256496750.txt  Pasted-Skip-to-main-contentSkip-to-About-government-Switch-to-basic-HTML-version-Language-selection-Fran-1740400323368.txt
cluster analysis/: cloudbuild.yaml  pyproject.toml
cluster analysis/app/: app.py
cluster analysis/app/components/: footer.py
cluster analysis/app/static/: temp_map.html
cluster analysis/app/templates/: accessibility.html  accessibility_fr.html
cluster analysis/app/utils/: language_controller.py  ors_client.py  spatial_analysis.py
cluster analysis/attached_assets/: Pasted--type-FeatureCollection-features-type-Feature--1740235922790.txt  Pasted-ARGUMENT-ROADMAP-To-craft-a-robust-legal-roadmap-for-arguing-that-dynamic-web-maps-embedded-in-fron-1740261050014.txt  Pasted-For-a-front-end-web-application-implementing-K-means-clustering-there-are-several-parameters-and-se-1740413157655.txt
cluster-analysis/: Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
geospatial-intersector/: Dockerfile  README.md  app.js  cloudbuild.yaml  index.html  main.py  pyproject.toml  styles.css
(+18 files in other folders)
