[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.4",
    "pandas>=2.2.3",
    "geopandas>=1.0.1",
    "openai>=1.63.2",
    "trafilatura>=2.0.0",
    "twilio>=9.4.6",
    "flask>=3.1.0",
    "flask-cors>=5.0.0",
    "scikit-learn>=1.6.1",
    "libpysal>=4.12.1",
    "esda>=2.7.0",
    "h3>=4.2.1",
    "feature-engine>=1.8.3",
]

[tool.setuptools]
packages = ["app", "attached_assets"]
